--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
           <% if user_signed_in? %>
             <li class="nav-item"><%= link_to "Log out", destroy_user_session_path,method: :delete, class: "nav-link" %> </li>
           <% else %>
-            <li class="nav-item"><%= link_to "Sign up", new_user_registration_path, class: "nav-link btn btn-primary" %> </li> 
-            <li class="nav-item"><%= link_to "Sign in", new_user_session_path, class: "nav-link btn btn-success" %></li>
+            <li class="nav-item"><%= link_to "Sign up", new_user_registration_path, class: " btn btn-primary" %> </li> 
+            <li class="nav-item"><%= link_to "Sign in", new_user_session_path, class: "btn btn-success" %></li>
           <% end %>
         </ul>
       </div>
